# dhivashi-mobile

./: .env.example  ARCHITECTURE.md  FEATURES.md  README.md  ROADMAP.md  db-schema.sql  docker-compose.full.yml  docker-compose.yml  package.json  pubspec.yaml  pyproject.toml  schema.sql
.github/workflows/: build-apk.yml  main.yml
backend/: Dockerfile
backend/agents/: audit.py  demand_forecast.py  order_routing.py
backend/api/: database.py  main.py
backend/api/routers/: delivery.py  orders.py  vendors.py
backend/tests/: test_api.py
infra/k8s/: dhivashi.yaml
mobile/: melos.yaml  pubspec.yaml
mobile/customer/: pubspec.yaml
mobile/customer/lib/: main.dart
mobile/customer/lib/screens/: auth_screen.dart  cart_screen.dart  home_screen.dart
mobile/rider/: pubspec.yaml
mobile/rider/lib/: main.dart
supabase/: config.toml
supabase/functions/payments/: index.ts
supabase/migrations/: init.sql
supabase/volumes/db/data/: postmaster.opts  postmaster.pid
supabase/volumes/db/data/base/1/: 2619  2696  2840  2841  pg_internal.init
supabase/volumes/db/data/base/5/: 1247  1249  1255  1255_fsm  1259  1259_fsm  16988  17307_vm  17312  17313  18146  18147  18149  18156  18157  18169  18185  18186  18203  18204  18221  18222  2224  2579  2600  2601  2601_vm  2602  2602_vm  2603  2603_vm  2604  2605  2605_vm  2606  2608  2608_fsm  (+78 more)
supabase/volumes/db/data/global/: 1214  1214_fsm  1214_vm  1232  1233  1260  pg_control  pg_internal.init
supabase/volumes/db/data/pg_stat_tmp/: pgss_query_texts.stat
supabase/volumes/db/init/: 20260424000000_init_dhivashi.sql
